--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body {
     height: 40rem;
     width: 40rem;
     display: grid;
-    grid-template-columns: repeat(10,1fr)
 }
 
 .pixel {
@@ -29,5 +28,7 @@ body {
 }
 
 .apple {
-    background-color: red;
+    background: url('./apple-removebg-preview.png');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
